--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,10 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@import 'normalize.css/normalize.css';
+@import 'bootstrap/dist/css/bootstrap.css';
+
+
 @import '@fortawesome/fontawesome-free/css/fontawesome.css';
 @import '@fortawesome/fontawesome-free/css/regular.css';
 @import '@fortawesome/fontawesome-free/css/solid.css';
@@ -13,8 +17,11 @@
 
 @import 'datatables.net-dt/css/jquery.dataTables.css';
 @import 'datatables.net-responsive-dt/css/responsive.dataTables.css';
+@import "datatables.net-dt/css/jquery.dataTables.css";
+@import "datatables.net-bs4/css/dataTables.bootstrap4.css";
+@import "datatables.net-buttons-dt/css/buttons.dataTables.css";
 
-@import 'toastr/toastr.scss';
+@import 'toastr/build/toastr.css';
 
 @import 'daterangepicker/daterangepicker.css';
 
